--- a/figure4to6.Rmd
+++ b/figure4to6.Rmd
@@ -15,12 +15,14 @@ library(readxl)
 library(RColorBrewer)
 library(gridExtra)
 
-# read in 1figr tabs
-journal <- read_excel("1science/1figr_U_Virginia_edit.xlsx", sheet = 4, skip = 8)
+# read in original unedited data
+journal <- read_excel("1science/1figr_U_Virginia_Original.xlsx", 
+                      sheet = 4, 
+                      skip = 8)
 
 # rename variables in journal
-names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1", "jr5", "currentper",
-                    "cites", "citeper", "pubs", "pubsper", "synth", "jtier", "subtier", "dupes",
+names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1", "jr5", 
+                    "cites", "pubs", "synth", "jtier", "subtier", "dupes",
                     "oa", "oaper", "fig2", "scopus", "arif", "domain", "field", "subfield", 
                     "pub2008", "pub2009", "pub2010", "pub2011", "pub2012", "pub2013", "pub2014",
                     "pub2015", "pub2016", "pub2017", "cite2008", "cite2009", "cite2010", "cite2011",
@@ -30,7 +32,27 @@ names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1"
                     "oaper2013", "oaper2014", "oaper2015", "oaper2016", "oaper2017", "scopus2008",
                     "scopus2009", "scopus2010", "scopus2011", "scopus2012", "scopus2013", "scopus2014",
                     "scopus2015", "scopus2016", "scopus2017", "jr12015", "jr12016", "jr12017", "jr12018",
-                    "jr12015_2018", "jid", "journalname")
+                    "jid", "journalname")
+
+
+# derive Current Year Use Percentage - currentper
+# derive % of papers referenced by UVA - citeper
+# derive UVA Papers % of total - pubsper
+
+journal <- journal %>% 
+  mutate(jr5 = if_else(jr5 == "N/A", NA_character_, jr5),
+         jr1 = if_else(jr1 == "N/A", NA_character_, jr1),
+         currentper = as.numeric(jr5)/as.numeric(jr1),
+         citeper = if_else(!is.finite(cites/scopus),0,cites/scopus),
+         pubsper = if_else(!is.finite(pubs/scopus),0,pubs/scopus)) 
+
+# derive Downloads JR1 2015-2018
+journal <- journal %>% 
+  mutate_if(str_detect(names(journal), pattern = "^jr120"), 
+            ~as.numeric(if_else(. == "N/A", "0", .))) %>% 
+  mutate(jr12015_2018 = jr12015 + jr12016 + jr12017 + jr12018) %>% 
+  select(sort:jr5, currentper, cites, citeper, pubs, pubsper,
+         synth:jr12018,jr12015_2018,jid, journalname)
 
 # keep only package data for big 5
 big5 <- journal %>% 
@@ -80,6 +102,7 @@ big5ref <- full_join(big5ref, totalref, by = "year") %>%
 # plot uva percent
 p1 <- ggplot(totalref, aes(x = year, y = tot, group = 1)) + 
   geom_line() +
+  scale_y_continuous(labels = scales::comma) + 
   labs(title = "References by UVA Authors",
        subtitle = "Across All Providers",
        x = "Year", y = "Number of References")
@@ -136,6 +159,7 @@ big5pub <- big5pub %>%
 p1 <- ggplot(big5pub, aes(x = year, y = scopus, group = provider)) + 
   geom_line(aes(color = provider)) +
   scale_linetype_manual(values=c("longdash", "solid"), guide=F) +
+  scale_y_continuous(labels = scales::comma) + 
   labs(title = "Total Number of Articles Published",
        subtitle = "In Big 5 Providers",
        x = "Year", y = "Number of Articles", color = "Provider")
@@ -187,9 +211,10 @@ big5oa <- big5oa %>%
 p1 <- ggplot(big5oa, aes(x = year, y = scopus, group = provider)) + 
   geom_line(aes(color = provider)) +
   scale_color_brewer(type = "qual", palette = "Set1") +
+  scale_y_continuous(labels = scales::comma) + 
   labs(title = "Number of Articles Published",
        subtitle = "In Big 5 Providers",
-       x = "Year", y = "Number of Articlest", color = "Provider")
+       x = "Year", y = "Number of Articles", color = "Provider")
 
 p2 <- ggplot(big5oa, aes(x = year, y = oa, group = provider)) +
   geom_line(aes(color = provider)) +
@@ -198,9 +223,16 @@ p2 <- ggplot(big5oa, aes(x = year, y = oa, group = provider)) +
        subtitle = "In Big 5 Providers",
        x = "Year", y = "Number of Articles", color = "Provider")
 
+# labels to add 2017 values at end of lines
+p3_labels <- big5oa %>% 
+  group_by(provider) %>% 
+  filter(year == "2017") %>% 
+  mutate(oaper = round(oaper))
+
 p3 <- ggplot(big5oa, aes(x = year, y = oaper, group = provider)) +
   geom_line(aes(color = provider)) +
   scale_color_brewer(type = "qual", palette = "Set1") +
+  geom_text(aes(x = year, y = oaper, label = oaper), p3_labels, nudge_x = 0.2) +
   labs(title = "Percent of OA-Available Articles",
        subtitle = "In Big 5 Providers",
        x = "Year", y = "Percent of Articles", color = "Provider")
